test/files/neg/macro-invalidusage-presuper.check
Macros_Test_2.scala:3: error: early initializers are no longer supported; use trait parameters instead
class D extends { def x = macro impl } with AnyRef
                ^
Macros_Test_2.scala:3: error: ';' expected but 'with' found.
class D extends { def x = macro impl } with AnyRef
                                       ^
two errors found
